# confidential-pqc-tee

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PAPER_SECTIONS.md  README.md  build.rs  concurrency_results.txt  generate_benchmark_data.sh  generate_elite_figures.py  plot_results.py  run_stress_tests.sh
benchmark_data/: attestation_times.txt  inference_times.txt  iouring_stress.txt  roundtrip_times.txt
examples/: stress_test.rs  stress_test_v2.rs
src/: enclave_mesh.rs  error.rs  iouring.rs  kvm_enclave.rs  main.rs  main.rs.bak  onnx_ai.rs  pqcrypto.rs  seccomp.rs
tests/: seccomp_proof.rs
